--- a/new.html
+++ b/new.html
@@ -15,15 +15,24 @@ var canvas = document.getElementById('myCanvas');
 var can = canvas.getContext("2d");
 var cards_img = new Image();
 var background = new Image();
+var back_card = new Image();
+var end_button = new Image();
+var player_cards = [];
+var x_position = 100;
+var points = 0;
+
+canvas.addEventListener('click', getPosition, false);
 
 go();
 function go(){
     background.src = 'img/back.jpg';   
     cards_img.src = 'img/cards.png';
+    back_card.src = 'img/cards.png';
+    end_button.src = 'img/end.png';
   
 }
 
-var cards_name = ['a','2','3','4','5','6','7','8','9','10','j','q','k'];
+var cards_name = ['14','2','3','4','5','6','7','8','9','10','11','12','13'];
 
 var card = function(name,x,y,cut_heigth,cut_width){
     return {
@@ -35,33 +44,20 @@ var card = function(name,x,y,cut_heigth,cut_width){
     }
 }
 
-/*fdfdfdfdf*/
+
 var cards = [];
 var add_cards=function(){
     x_pos = 50;
     cut_width = 0;
     for (i=0;i<cards_name.length;i++){
-        cards.push(card(cards_name[i],x_pos,100,244,cut_width));
+        cards.push(card(cards_name[i],x_pos,350,244,cut_width));
         x_pos += 50;
         cut_width += 167;
     }
 }
 add_cards();
+
 /*
-function render(){
-    x = 0;
-    y = 0;
-    x_pos = 50;
-    y_pos = 100;
-    for (i=0;i<13;i++){
-        can.drawImage(cards,x,y,167,244,x_pos,y_pos,130,180);
-        x += 167;
-        x_pos += 50;
-    }
-}
-*/
-
-
 function render(){
     can.clearRect(0,0,800,600)
     can.drawImage(background,0,0);
@@ -69,8 +65,97 @@ function render(){
         can.drawImage(cards_img,cards[i].cut_width,cards[i].cut_heigth,167,244,cards[i].x_pos,cards[i].y_pos,130,180);
     }
 }
+*/
+
+function render(){
+    can.clearRect(0,0,800,600);
+    can.drawImage(background,0,0);
+    can.drawImage(back_card,167*2,4*244,167,244,400,50,130,180)
+    can.drawImage(end_button,600,400,180,180)
+    can.font = "bold 20px Georgia";
+    can.fillStyle = "#00ff00";
+    can.fillText("Súčet kariet: "+points,100,570);
+    for (i=0;i<player_cards.length;i++){
+        can.drawImage(cards_img,cards[player_cards[i]].cut_width,cards[player_cards[i]].cut_heigth,167,244,cards[player_cards[i]].x_pos,cards[player_cards[i]].y_pos,130,180);
+    }
+    if (points > 21){
+        setTimeout(function() { end_game('loose'); }, 5);
+    }
+
+}
 
 setInterval(render,1000/30);
+
+function end_game(status){
+    if (status == 'loose'){
+        alert("máš nad 21 bodov - prehral si :(");
+        points = 0;
+        player_cards = [];
+        x_position = 100;
+    }
+    else{
+        enemy = Math.floor(Math.random() * (21 - 15 + 1)) + 15
+        if (enemy < points){
+        alert("máš "+points+" bodov a super má "+enemy+" bodov ... VYHRAL SI");
+        points = 0;
+        player_cards = [];
+        x_position = 100; 
+        }
+        else{
+        alert("máš "+points+" bodov a super má "+enemy+" bodov ... PREHRAL SI");
+        points = 0;
+        player_cards = [];
+        x_position = 100;   
+        }
+    }
+}
+
+
+
+
+function getPosition(event)
+{
+  var x = event.x;
+  var y = event.y;
+
+  var canvas = document.getElementById("myCanvas");
+
+  x -= canvas.offsetLeft;
+  y -= canvas.offsetTop;
+
+
+ if ((x>400 && x < 530) && (y>50 && y < 230)){
+  add_card();
+}
+
+ if ((x>600 && x < 780) && (y>400 && y < 580)){
+  end_game('end');
+  }
+
+}
+
+function add_card(){
+
+    number = Math.floor((Math.random() * 13) + 0);
+    if (player_cards.includes(number)){
+        add_card();
+        }
+    else {
+        player_cards.push(number);
+        points += parseInt(cards[number].name);
+        cards[number].x_pos = x_position;
+        x_position += 70;
+        }
+    
+
+   // can.drawImage(cards_img,cards[number].cut_width,cards[number].cut_heigth,167,244,cards[number].x_pos,cards[number].y_pos,130,180);
+
+
+}
+
+
+
+
 
 console.log(cards);
 
